show route connected

--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -1,36 +1,1 @@
-<%- include('../partials/html-head') %>
-<link rel="stylesheet" href="/stylesheets/movies/index.css" />
-<%- include('../partials/nav') %>
-
-<main>
-  <h1>Movie List</h1>
-  <table id="list">
-    <thead>
-      <tr>
-        <th>Title</th>
-        <th>Release Year</th>
-        <th></th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <!-- <% movies.forEach((movie) => { %>
-      <tr>
-        <td><%= movie.title %></td>
-        <td><%= movie.releaseYear %></td> -->
-        <td><a href="/flights/<%= flight._id %>">DETAILS</a></td>
-        <td>
-          <form 
-            action="/flights/<%= flight._id %>?_method=DELETE"
-            method="POST"
-          >
-            <button type="submit">X</button>
-          </form>
-        </td>
-      </tr>
-      <!-- <% }) %> -->
-    </tbody>
-  </table>
-</main>
-
-<%- include('../partials/footer') %>
+flights/index
