--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/html-head') %>
+<!-- <%- include('../partials/html-head') %>
 <link rel="stylesheet" href="/stylesheets/movies/new.css">
 <%- include('../partials/nav') %>
 
@@ -24,4 +24,6 @@
   </form>
 </main>
 
-<%- include('../partials/footer') %>
+<%- include('../partials/footer') %> -->
+
+flight/new
