--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,12 +3,12 @@
   <nav>
 		<i class="fas fa-film fa-2x"></i>
     <a 
-      href="/flight/new" class=<%= title === 'Add flight' ? 'active' : '' %>
+      href="/flights/new" class=<%= title === 'Add flight' ? 'active' : '' %>
     >
       ADD FLIGHT
     </a>
     <a 
-      href="/flight" class=<%= title === 'All flight' ? 'active' : '' %>
+      href="/flights" class=<%= title === 'All flight' ? 'active' : '' %>
     >
       ALL FLIGHT
     </a>
