--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -1,1 +1,38 @@
-flights/index
+<%- include('../partials/html-head') %>
+<link rel="stylesheet" href="/stylesheets/flights/index.css" />
+<%- include('../partials/nav') %>
+
+<main>
+  <h1>flight List</h1>
+  <table id="list">
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>departs</th>
+        <th></th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% flights.forEach((flight) => { %>
+      <tr>
+        <td><%= flight.airline %></td>
+        <td><%= flight.airport %></td>
+        <td><%= flight.departs %></td>
+        <td><a href="/flights/<%= flight._id %>">DETAILS</a></td>
+        <td>
+          <form 
+            action="/flights/<%= flight._id %>?_method=DELETE"
+            method="POST"
+          >
+            <button type="submit">X</button>
+          </form>
+        </td>
+      </tr>
+      <% }) %>
+    </tbody>
+  </table>
+</main>
+
+<%- include('../partials/footer') %>
+
