--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -1,29 +1,36 @@
-<!-- <%- include('../partials/html-head') %>
-<link rel="stylesheet" href="/stylesheets/movies/new.css">
+<%- include('../partials/html-head') %>
+<link rel="stylesheet" href="/stylesheets/flights/new.css">
 <%- include('../partials/nav') %>
 
 <main>
   <h1><%= title %></h1>
   <form id="new-form" action="/flights" method="POST">
-    <label for="title-input">Title:</label>
-    <input type="text" name="title" id="title-input">
-    <label for="release-year-input">Release Year:</label>
-    <input type="text" name="releaseYear" id="release-year-input">
-    <label for="mpaa-rating-select">MPAA Rating:</label>
-    <select name="mpaaRating" id="mpaa-rating-select">
-      <option value="G">G</option>
-      <option value="PG">PG</option>
-      <option value="PG-13">PG-13</option>
-      <option value="R">R</option>
+    <label for="airline-select">Airline:</label>
+    <select name="airline" id="airline-select">
+      <option value="American">American</option>
+      <option value="Southwestern">Southwestern</option>
+      <option value="United">United</option>
+      <option value="N/A" selected>N/A</option>
     </select>
-    <label for="cast-input">Cast (separate actors with commas):</label>
-    <input type="text" name="cast" id="cast-input">
-    <label for="now-showing-checkbox">Now Showing:</label>
-    <input type="checkbox" name="nowShowing" id="now-showing-checkbox" checked>
-    <button type="submit">Add Movie</button>
-  </form>
+    <label for="airport-select">Airport:</label>
+    <select name="airport" id="airport-select">
+      <option value="AUS">AUS</option>
+      <option value="DFW">DFW</option>
+      <option value="DEN">DEN</option>
+      <option value="LAX">LAX</option>
+      <option value="SAN">SAN</option>
+      <option value="DEN" selected>DEN</option>
+    </select>
+    <label for="flight-No-input">Flight Number:</label>
+    <input type="text" name="flightNo" id="flight-No-input">
+    <label for="departs-input">Departure:</label>
+    <input type="date" name="departs" id="deprts-input">
+    <!-- <label for="now-showing-checkbox">Now Showing:</label>
+    <input type="checkbox" name="nowShowing" id="now-showing-checkbox" checked> -->
+    <button type="submit">Add Flight</button>
+    
+</form>
 </main>
 
-<%- include('../partials/footer') %> -->
+<%- include('../partials/footer') %>
 
-flight/new
