--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -1,1 +1,19 @@
-flights/:flightId
+<%- include('../partials/html-head') %>
+<link rel="stylesheet" href="/stylesheets/flights/show.css" />
+<%- include('../partials/nav') %>
+
+<main>
+  <h1><%= title %></h1>
+  <section>
+    <div>Title: </div>
+    <div>
+      <a href="/flights/<%= flight._id %>/edit">
+        <button>Edit flight</button>
+    
+</form>
+
+</main>
+  
+<%- include('../partials/footer') %>
+
+<!-- Details -->
