--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -7,10 +7,10 @@
   <table id="list">
     <thead>
       <tr>
-        <th>Title</th>
-        <th>departs</th>
-        <th></th>
-        <th></th>
+        <th>Airline</th>
+        <th>Airport</th>
+        <th>Date</th>
+        <th>Details</th>
       </tr>
     </thead>
     <tbody>
