--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -42,6 +42,14 @@
       <a href="/flights/<%= flight._id %>/edit">
         <button>Edit flight</button>
       </a>
+      <form id="add-per-to-meal" action="/flights/<%= flight._id %>/meals" method="POST">
+        <select name="mealsId">
+          <% meals.forEach(meal => { %>
+            <option value="<%= meal._id %>"><%= meal.name %></option>
+          <% }) %>
+        </select>
+        <button type="submit">Add to meal</button>
+      </form>
     </main>
 
     <%- include('../partials/footer') %>
