--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -12,4 +12,11 @@
     >
       ALL FLIGHT
     </a>
+
+    <a 
+    href="/meals/new" class=<%= title === 'Add Meal' ? 'active' : '' %>
+    >
+    ADD MEALS
+
+  </a>
   </nav>
