--- a/views/flights/edit.ejs
+++ b/views/flights/edit.ejs
@@ -1,33 +1,16 @@
-<!-- <%- include('../partials/html-head') %>
+<%- include('../partials/html-head') %>
 <link rel="stylesheet" href="/stylesheets/flights/edit.css">
 <%- include('../partials/nav') %>
 
 <main>
-  <h1><%= title %></h1>
-  <form id="new-form" action="" method="POST">
-    <label for="title-input">Title:</label>
-    <input type="text" value="<%= flight.title %>" name="title" id="title-input">
-    <label for="release-year-input">Release Year:</label>
-    <input type="text" value="<%= flight.releaseYear %>" name="releaseYear" id="release-year-input">
-    <label for="mpaa-rating-select">MPAA Rating:</label>
-    <select name="mpaaRating" id="mpaa-rating-select">
-      <option value="<%= flight.mpaaRating %>"><%= flight.mpaaRating %></option>
-      <option value="G">G</option>
-      <option value="PG">PG</option>
-      <option value="PG-13">PG-13</option>
-      <option value="R">R</option>
-    </select>
-    <label for="cast-input">Cast (separate actors with commas):</label>
-    <input type="text" value="<%= flight.cast.join(', ') %>" name="cast" id="cast-input">
-    <label for="now-showing-checkbox">Now Showing:</label>
-    <input type="checkbox" <%= movie.nowShowing ? 'checked' : '' %> name="nowShowing" id="now-showing-checkbox">
-    <button type="submit">Save Movie</button>
-  </form>
-</main>
 
 <main>
     <h1><%= title %></h1>
-    <form id="new-form" action="" method="POST">
+    <form id="new-form" action="/flights/<% flight._id%>?_method=PUT" method="POST">
+
+      <label for="airline-input">Airline:</label>
+      <input type="text" value="<%= flight.airline %>" name="airline" id="airline-input">
+      <label for="airport-select">Airport</label>
         <select name="airline" id="airline-select">
             <option value="<%= flight.airline %>"><%= flight.airline %></option>
             <option value="American">American</option>
@@ -35,20 +18,13 @@
             <option value="United">United</option>
             <option value="N/A" selected>N/A</option>
           </select>
-          <select name="airport" id="airport-select">
-            <option value="<%= flight.airport%>"><%= flight.airport %></option>
-            <option value="AUS">AUS</option>
-            <option value="DFW">DFW</option>
-            <option value="DEN">DEN</option>
-            <option value="LAX">LAX</option>
-            <option value="SAN">SAN</option>
-            <option value="DEN" selected>DEN</option>
-          </select>
-          
+          <label for="flightNo-input">Flight Number: </label>
+          <input type="number" value="<%=flight.flightNo%>" name="flightNo" id="flightNo-input">
+          <label for="departs-input">Departs: </label>
+          <input type="datetime-local" value="<%= flight.departs.toISOString() %>"  name="departs" id="departs-input">
+          <button type="submit" >Submit Flight</button>
     </form>
-
 </main>
 
-<%- include('../partials/footer') %> -->
+<%- include('../partials/footer') %>
 
-hello
