--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -3,53 +3,69 @@
   <%- include('../partials/nav') %>
 
     <main>
-      <h1>
-        <%= title %>
-      </h1>
-      <section>
-        <form action="">
-        <div>
-            <table id="list">
-              <thead>
-                <tr>
-                  <th>Airline</th>
-                  <th>Airport</th>
-                  <th>Date</th>
-                  <th>flight number</th>
+      <h1> <%= title %> </h1>
 
-                </tr>
-              </thead>
-              </tr>
-              <td>
-                <%= flight.airline %>
-              </td>
-              <td>
-                <%= flight.airport %>
-              </td>
-              <td>
-              <%= flight.departs %>
-                </td>
-                <td>
-                <%= flight.flightNo %>
-                  </td>
-                  </tr>
-                  <label for="seats">seat:</label>
-                  <input name="seat" required pattern="[A-F][1-9]\d?">
-                  <label for="price">price:</label>
-                  <input name="price" required pattern="0">
+      <section>
+
+        <div>Airline: </div>
+        <div>
+          <%= flight.airline %>
+          <a href="/flights/<%= flight._id %>/edit">
+            <button>Edit a Flight</button></a>
+        </div>
+        <div>Airport: </div>
+        <div><%= flight.airport %></div>
+        <div>Flight No: </div>
+        <div><%= flight.flightNo %></div>
+        <div>Departs: </div>
+        <div><%= flight.departs %></div>
+    
+    
       </section>
-      </form>
-      <a href="/flights/<%= flight._id %>/edit">
-        <button>Edit flight</button>
-      </a>
-      <form id="add-per-to-meal" action="/flights/<%= flight._id %>/meals" method="POST">
-        <select name="mealsId">
+  
+      <form id="add-per-to-cast" action="/flights/<%= flight._id %>/meals" method="POST">
+        <select name="mealId">
           <% meals.forEach(meal => { %>
             <option value="<%= meal._id %>"><%= meal.name %></option>
           <% }) %>
         </select>
-        <button type="submit">Add to meal</button>
+        <button type="submit">Add to Meals</button>
       </form>
+    
+      <h2>Tickets</h2>
+
+      <% if (flight.tickets.length) { %>
+        <table>
+          <thead>
+            <tr>
+              <th>Date</th>
+              <th>Seat</th>
+              <th>Price</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% flight.tickets.forEach(function(ticket) { %>
+              <tr>
+                <td><%= ticket.createdAt.toLocaleDateString() %></td>
+                <td><%= ticket.seat %></td>
+                <td><%= ticket.price %></td>
+              </tr>
+            <% }) %>
+          </tbody>
+        </table>
+      <% } else { %>
+        <h3>No Tickets Yet</h3>
+      <% } %>
+
+      <form in="add-review-form" action="/flights/<%= flight._id %>/tickets" method="POST">
+        <label for="seat-imput">Seats: </label>
+        <input type="text" name="seat" required pattern="[A-F][1-9]\d?" id="seat-input">
+        <label for="price-input">Price:</label>
+        <input type="number" name="price" id="price-input">
+        <button type="submit">Add Ticket</button>
+      </form>
+
+
     </main>
 
     <%- include('../partials/footer') %>
